# apollo

./: .env.example  .gitignore  .tool-versions  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  README.md  bun.lockb  conftest.py  context_and_adaptor_info.txt  http-stream-test.js  init_milvus.py  package.json  path.config  pyproject.toml  test_concurrent_db_writes.py
.changeset/: all-chairs-join.md  auth-instance-gating.md  beige-shrimps-vanish.md  better-friends-nail.md  breezy-pans-lay.md  breezy-pens-cough.md  brown-rockets-scream.md  calm-rockets-occur.md  chatty-boats-hug.md  clean-fishes-guess.md  clever-cars-travel.md  client-auth.md  client-key-mapping.md  cold-drinks-sing.md  cold-schools-tie.md  cool-clubs-show.md  cuddly-oranges-spend.md  early-carrots-look.md  empty-oranges-turn.md  fiery-spies-double.md  fifty-beers-stand.md  five-yaks-report.md  funny-books-fail.md  goofy-monkeys-send.md  heavy-sloths-start.md  hip-papayas-obey.md  honest-canyons-cough.md  hungry-onions-rhyme.md  jolly-shirts-sniff.md  kind-files-throw.md  kind-rings-cough.md  late-cycles-rush.md  late-terms-dance.md  lazy-cooks-itch.md  light-moose-ring.md  little-pumas-hammer.md  loud-baboons-drop.md  major-bats-refuse.md  mean-frogs-add.md  mighty-boats-wear.md  (+41 more)
.claude/agents/: code-simplifier.md  streaming-narrative-reviewer.md
.claude/rules/: python-services.md
.claude/skills/create-spec/: SKILL.md
.claude/skills/research-codebase/: SKILL.md
.claude/skills/review/: SKILL.md
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: auto-tag.yaml  dockerize.yaml  unit-tests.yaml
agent-team-architecture-plan/: 1-unit-tests.md  2-service-tests.md  3-integration-tests.md  4-acceptance-tests.md  5-overview.md  example-acceptance-md-spec.md  observations-on-acceptance-tests.md  pr-summary-acceptance-tests.md  scratch-unit.md
platform/migrations/: 0001_lightning_clients.sql
platform/src/: bridge.ts  index.ts  server.ts
platform/test/: auth.startup.test.ts  auth.unit.test.ts  client_keys.test.ts  db.test.ts  errors.test.ts  hash.test.ts  server.test.ts
services/: entry.py  entry_test.py  langfuse_util.py  models.py  streaming_util.py  util.py
services/_instance_auth/: README.md  encrypt_key.ts  hash_token.py  provision_client.ts  schema.sql
services/adaptor_apis/: README.md  adaptor_apis.ts
services/adaptor_gen/: adaptor_gen.py
services/code_generator/: code_generator.py  prompts.py  utils.py
services/describe_adaptor/: describe_adaptor.py  redact.py  redact_llm.py
services/describe_adaptor_py/: describe_adaptor_py.py
services/doc_agent_chat/: README.md  agent.py  config.yaml  config_loader.py  doc_agent_chat.py  doc_search.py  prompt.py  test_service.ipynb  tools.py
services/doc_agent_upload/: README.md  doc_agent_upload.py  doc_indexer.py  doc_processor.py
services/docsite_explainer/: README.md  docsite_explainer.py  prompts.py
services/echo/: echo.py  log.py
services/embed_adaptor_docs/: README.md  embed_adaptor_docs.py  test_input.json
services/embed_docsite/: README.md  docsite_fetcher.py  docsite_indexer.py  docsite_processor.py  embed_docsite.py  github_utils.py
services/embed_loinc_dataset/: 202311_loinc_snomed_mappings.ipynb  README.md  embed_loinc_dataset.py
services/embed_snomed_dataset/: README.md  embed_snomed_dataset.py
services/embeddings/: README.md  demo.py  embeddings.py  example.py  generate_embeddings.py  health_mappings.py  loinc_store.py  snomed_store.py  utils.py
services/embeddings_demo/: README.md  embeddings_demo.py
services/gen_job/: README.md  client.py  gen_job.py  job_processor.py  prompt.py
services/gen_project/: README.md  config_loader.py  gen_project.ipynb  gen_project.py  gen_project_config.yaml  gen_project_prompt.py  gen_project_prompts.yaml  lint_output.py
services/global_agent/: PAYLOAD_SPEC.md  README.md  config.yaml  config_loader.py  global_agent.py  planner.py  prompts.yaml  router.py  subagent_caller.py  supervisor.py
services/global_chat/: PAYLOAD_SPEC.md  README.md  config.yaml  config_loader.py  global_chat.py  planner.py  prompts.yaml  router.py  subagent_caller.py  yaml_utils.py
services/health-mappings/: embed_loinc_dataset.py  embed_snomed_dataset.py
services/inference/: inference.py
services/job_chat/: README.md  Untitled  db_utils.py  job_chat.py  logging_metadata.py  old_prompt.py  prompt.py  prompt_online.py  rag.yaml  rag_config_loader.py  rag_prompts.yaml  retrieve_docs.py
services/latest_adaptors/: README.md  latest_adaptors.py
services/load_adaptor_docs/: README.md  load_adaptor_docs.py  schema.sql
services/loinc/: 202311_loinc_snomed_mappings.ipynb  embed_loinc_dataset.py
services/search/: README.md  generate_docs_embeddings.py  generate_docs_emebddings.py  generate_docs_emebeddings.py  search.py  utils.py
services/search_adaptor_docs/: README.md  search_adaptor_docs.py
services/search_docsite/: README.md  rag.yaml  rag_prompts.yaml  search_docsite.ipynb  search_docsite.py
services/signature_generator/: signature_generator.py  utils.py
services/snomed/: embed_snomed_dataset.py
services/status/: README.md  status.py
services/test_errors/: test_errors.py
services/testing/: README.md  anthropic_mock.py  apollo_client.py  fixtures.py  judge.py  judge_rules.md  judges.py  payloads.py  responses.py  span_timing.py  spec_collector.py  spec_parser.py  yaml_assertions.py
services/upload_adaptor_docs/: README.md  upload_adaptor_docs.py
services/util/: errors.py
services/vocab_mapper/: dataset_tools.py  prompts.py  tools.py  vocab_mapper.py  vocab_mapper_test.ipynb  vocab_mapping_pipeline.ipynb
services/workflow_chat/: README.md  TEST_USAGE.md  adaptors_cache.json  available_adaptors.py  config_loader.py  gen_project.ipynb  gen_project_config.yaml  gen_project_prompt.py  gen_project_prompts.yaml  run_pytest.py  run_pytest_prints.py  run_test.py  run_test_all.py  run_unit_test.py  test_functions.py  test_pass_fail.py  test_qualitative.py  test_utils.py  tests_to_run.txt  workflow_chat.py
testing/: anthropic_mock.py  fixtures.py
(+240 files in other folders)
