[tool.poetry]
name = "apollo"
version = "1.0.0"
description = "A python monorepo for AI code generation"
authors = ["Isma-Ilou Sadou <isma@openfn.org>"]
license = "LGPLv3"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "3.11.*"
openai = "^1.23.3"
python-dotenv = "^1.0.1"
anthropic = "^0.85.0"

langchain-pinecone = "0.2.2"
langchain-community = "^0.3.27"
langchain-openai = "^0.3.1"
datasets = "^3.2.0"
nltk = "^3.9.3"
pytest = "^8.4.1"
sentry-sdk = "^2.35.0"
psycopg2-binary = "^2.9.10"

[tool.poetry.group.dev]
optional = false

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
ruff = "^0.15.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
select = [
    "E",   # pycodestyle
    "F",   # pyflakes
    "W",   # pycodestyle (warnings)
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "ANN", # flake8-annotations
    "B",   # flake8-bugbear
    "A",   # flake8-builtins
    "COM", # flake8-commas
    "C4",  # flake8-comprehensions
    "DTZ", # flake8-datetimez
    "EXE", # flake8-executable
    "PIE", # flake8-pie
    "T20", # flake8-print
    "PT",  # flake8-pytest
    "SIM", # flake8-simplify
    "ARG", # flake8-unused-arguments
    "PTH", # flake8--use-pathlib
    "ERA", # flake8-eradicate
    "RUF", # ruff specific rules
    "PL",  # pylint
]
ignore = [
    "ANN101", # Missing type annotation for self in method
    "ANN204", # Missing type annotation for special method
    "ANN003", # Missing type annotation for `**kwargs`
    "UP007",  # Use `X | Y` for type annotations instead of Union
    "E501",
]
line-length = 120
target-version = "py311"
